overflow probleme fixed

--- a/main.scss
+++ b/main.scss
@@ -1,20 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Charmonman:wght@700&display=swap");
 
-html {
-	font-size: 10px;
-}
 body {
-	margin: 0;
-	padding: 0;
 	font-family: "Montserrat", sans-serif;
-	box-sizing: border-box;
+	overflow-x: hidden !important;
 	position: relative;
-	overflow-x: hidden;
 }
 * {
-	box-sizing: border-box;
 	scroll-behavior: smooth;
+	box-sizing: border-box;
+	position: relative;
+	margin: 0;
+	padding: 0;
 }
 .nav-section {
 	height: 10vh;
@@ -33,7 +30,7 @@ body {
 		button {
 			border: none;
 			outline: none;
-			padding: 2px 4px;
+			padding: 4px 6px;
 			border-radius: 3px;
 			background-color: rgb(128, 128, 128);
 			color: white;
@@ -66,8 +63,8 @@ body {
 					height: 1px;
 					width: 0;
 					background-color: white;
-					transition: 0.3s ease-in-out;
 				}
+
 				&:hover::after {
 					width: 100%;
 					transform: scaleX(1.03);
@@ -173,6 +170,7 @@ body {
 	.about-img {
 		height: 100%;
 		width: 50%;
+		display: none;
 		.img {
 			height: 40%;
 			width: 60%;
@@ -220,31 +218,17 @@ body {
 		justify-content: center;
 		align-items: center;
 		padding: 2rem 5rem;
+		gap: 2rem;
 		.card {
 			background-color: rgba(128, 128, 128, 0.781);
 			height: 15rem;
-			width: 25rem;
-			margin: 1rem;
-			position: relative;
-			cursor: pointer;
+			width: auto;
+			flex: 1;
 			transition: 0.3s ease-in-out;
-			&::after {
-				content: "";
-				display: block;
-				position: absolute;
-				background-color: black;
-				transition: 0.3s;
-			}
-			.card-info {
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				text-transform: capitalize;
-				i {
-					font-size: 1.9rem;
-				}
-			}
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
 		}
 	}
 }
@@ -298,31 +282,45 @@ body {
 	}
 }
 @media (max-width: 560px) {
-	section {
-		padding: 0 2rem;
+	body {
+		h1 {
+			font-size: 1.9rem !important;
+		}
+		p {
+			margin: 0.9rem 0;
+		}
+		p {
+			margin: 0.9rem 0 !important;
+		}
 	}
 	.nav-section {
+		padding: 1rem 1rem;
 		.nav-logo {
 			h2 {
-				text-align: center;
+				font-size: 2rem;
+				font-family: "Charmonman", cursive;
+				text-transform: uppercase;
+				color: whitesmoke;
+				text-align: left;
 			}
 		}
 		.nav-bar {
 			position: absolute;
-			top: 10vh;
-			right: 0;
-			background-color: rgb(128, 128, 128);
-			height: 40vh;
-			width: 100vw;
+			top: 11vh;
+			right: 2%;
+			background-color: rgb(112, 108, 108);
+			height: 30vh;
+			width: 96vw;
 			transition: 0.4s ease-in-out;
-			transform: translateX(150%);
+			display: none;
+			border-radius: 4px;
 
 			ul {
 				flex-direction: column;
 				padding: 0;
 				li {
 					a {
-						font-size: 1.6rem;
+						font-size: 1.1rem;
 						color: whitesmoke;
 						text-transform: uppercase;
 						letter-spacing: 0.2rem;
@@ -344,8 +342,8 @@ body {
 			}
 		}
 		.show {
-			transform: translateX(0%);
-			z-index: -1;
+			display: block;
+			
 		}
 	}
 
@@ -359,9 +357,7 @@ body {
 				width: auto;
 				flex: 1;
 				padding: 0 1rem;
-				h1 {
-					font-size: 2rem;
-				}
+
 				button {
 					width: auto;
 					font-size: 1rem;
@@ -371,6 +367,7 @@ body {
 				}
 			}
 			.hero-img {
+				width: 100% !important;
 				flex: 1;
 				padding: 1rem 0;
 				img {
@@ -381,6 +378,7 @@ body {
 	}
 	/*about*/
 	#about {
+		margin-top: 5rem;
 		height: auto;
 		flex-direction: column;
 
@@ -413,7 +411,16 @@ body {
 		margin-top: 5rem;
 		height: auto;
 		.cards {
+			padding: 0 1rem;
 			flex-direction: column;
+			.card {
+				background-color: rgba(128, 128, 128, 0.781);
+				padding: 5rem 0;
+				width: 100vw !important;
+				flex: 1;
+			}
 		}
 	}
+
+
 }
